fix: display text logo on mobile

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -137,7 +137,8 @@
     }
 
     .header__img2 {
-        display: none;
+        width: 170px;
+        height: auto;
     }
 
     .header__avatar-container {
